--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/broker_activemqartemis_crd.yaml
@@ -1,5 +1,5 @@
 ﻿kind: CustomResourceDefinition
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 metadata:
   name: activemqartemises.broker.amq.io
 spec:
@@ -16,12 +16,16 @@ spec:
     scale:
       specReplicasPath: .spec.replicas
       statusReplicasPath: .status.replicas
+  conversion:
+    strategy: None
+  preserveUnknownFields: false
   versions:
     - name: v2alpha5
       served: true
       storage: true
       schema:
         openAPIV3Schema:
+          type: object
           required:
             - spec
           properties:
@@ -663,6 +667,7 @@ spec:
       storage: false
       schema:
         openAPIV3Schema:
+          type: object
           required:
             - spec
           properties:
@@ -1234,6 +1239,7 @@ spec:
       storage: false
       schema:
         openAPIV3Schema:
+          type: object
           required:
             - spec
           properties:
@@ -1796,6 +1802,7 @@ spec:
       storage: false
       schema:
         openAPIV3Schema:
+          type: object
           required:
             - spec
           properties:
@@ -2292,9 +2299,3 @@ spec:
                       type: array
                       items:
                         type: string
-    - name: v1alpha1
-      served: false
-      storage: false
-  conversion:
-    strategy: None
-  preserveUnknownFields: true
