--- a/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/0.20.0/activemq-artemis-operator.v0.20.0.clusterserviceversion.yaml
@@ -1731,7 +1731,7 @@ spec:
                 - delete
       clusterPermissions:
         - serviceAccountName: activemq-artemis-operator
-          roles:
+          rules:
             - apiGroups:
               - ""
               resources:
@@ -1865,11 +1865,11 @@ spec:
                       - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2160
                         value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.4
                       - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2180
-                        value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.6
+                        value: quay.io/artemiscloud/activemq-artemis-broker-init:0.2.7
                       - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
                         value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
                       - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
                         value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.1
                       - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2180
-                        value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.4
+                        value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.5
 
