--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Temporary Build Files
 build/_output
 build/_test
+antora/build/site
+antora/.cache
 # Created by https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
 ### Emacs ###
 # -*- mode: gitignore; -*-
