--- a/docs/security1.yaml
+++ b/docs/security1.yaml
@@ -5,29 +5,29 @@ metadata:
 spec:
   loginModules:
     propertiesLoginModules:
-    - name: 'prop-module'
-      users:
-      - name: sam
-        password: samsecret
-        roles:
-        - sender
-      - name: rob
-        password: robsecret
-        roles:
-        - receiver
+      - name: "prop-module"
+        users:
+          - name: "sam"
+            password: "samsecret"
+            roles:
+              - "sender"
+          - name: "rob"
+            password: "robsecret"
+            roles:
+              - "receiver"
   securityDomains:
     brokerDomain:
-      name: 'activemq'
+      name: "activemq"
       loginModules:
-      - name: 'prop-module'
-        flag: 'sufficient'
+        - name: "prop-module"
+          flag: "sufficient"
   securitySettings:
     broker:
-    - match: '#'
-      permissions:
-      - operationType: 'send'
-        roles:
-        - 'sender'
-      - operationType: ‘consume’
-        roles:
-        - 'receiver'
+      - match: "#"
+        permissions:
+          - operationType: "send"
+            roles:
+              - "sender"
+          - operationType: "consume"
+            roles:
+              - "receiver"
