Empty Operator running with some RBAC related errors

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,10 +11,10 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_activemqartemis.yaml
-#- patches/webhook_in_activemqartemisaddresses.yaml
-#- patches/webhook_in_activemqartemisscaledowns.yaml
-#- patches/webhook_in_activemqartemissecurities.yaml
+- patches/webhook_in_activemqartemis.yaml
+- patches/webhook_in_activemqartemisaddresses.yaml
+- patches/webhook_in_activemqartemisscaledowns.yaml
+- patches/webhook_in_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
