--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -25,6 +25,32 @@ patchesStrategicMerge:
 #- patches/cainjection_in_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
+patchesJson6902:
+- target:
+    group: "apiextensions.k8s.io" 
+    version: v1 # apiVersion
+    kind: CustomResourceDefinition
+    name: activemqartemis.broker.amq.io
+  path: patch_webhook_client_ca_bundles.yaml
+- target:
+    group: "apiextensions.k8s.io" 
+    version: v1 # apiVersion
+    kind: CustomResourceDefinition
+    name: activemqartemisaddresses.broker.amq.io
+  path: patch_webhook_client_ca_bundles.yaml
+- target:
+    group: "apiextensions.k8s.io" 
+    version: v1 # apiVersion
+    kind: CustomResourceDefinition
+    name: activemqartemisscaledowns.broker.amq.io
+  path: patch_webhook_client_ca_bundles.yaml
+- target:
+    group: "apiextensions.k8s.io" 
+    version: v1 # apiVersion
+    kind: CustomResourceDefinition
+    name: activemqartemissecurities.broker.amq.io
+  path: patch_webhook_client_ca_bundles.yaml
+
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
 - kustomizeconfig.yaml
