--- a/config/crd/patches/webhook_in_activemqartemis.yaml
+++ b/config/crd/patches/webhook_in_activemqartemis.yaml
@@ -13,4 +13,7 @@ spec:
           name: webhook-service
           path: /convert
       conversionReviewVersions:
-      - v1
+      - v2alpha3
+      - v2alpha4
+      - v2alpha5
+      #- v1
