--- a/config/rbac/activemqartemis_viewer_role.yaml
+++ b/config/rbac/activemqartemis_viewer_role.yaml
@@ -1,4 +1,4 @@
-# permissions for end users to view activemqartemis.
+# permissions for end users to view activemqartemises.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -7,7 +7,7 @@ rules:
 - apiGroups:
   - broker.amq.io
   resources:
-  - activemqartemis
+  - activemqartemises
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - broker.amq.io
   resources:
-  - activemqartemis/status
+  - activemqartemises/status
   verbs:
   - get
