--- a/config/crd/patches/cainjection_in_activemqartemises.yaml
+++ b/config/crd/patches/cainjection_in_activemqartemises.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: activemqartemis.broker.amq.io
+  name: activemqartemises.broker.amq.io
