--- a/config/rbac/activemqartemis_editor_role.yaml
+++ b/config/rbac/activemqartemis_editor_role.yaml
@@ -1,4 +1,4 @@
-# permissions for end users to edit activemqartemis.
+# permissions for end users to edit activemqartemises.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -7,7 +7,7 @@ rules:
 - apiGroups:
   - broker.amq.io
   resources:
-  - activemqartemis
+  - activemqartemises
   verbs:
   - create
   - delete
@@ -19,6 +19,6 @@ rules:
 - apiGroups:
   - broker.amq.io
   resources:
-  - activemqartemis/status
+  - activemqartemises/status
   verbs:
   - get
