--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
 - broker_v2alpha3_activemqartemisaddress.yaml
 - broker_v2alpha1_activemqartemisscaledown.yaml
 - broker_v1alpha1_activemqartemissecurity.yaml
+- broker_v1beta1_activemqartemis.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
