--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -15,6 +15,7 @@ patchesStrategicMerge:
 - patches/webhook_in_activemqartemisaddresses.yaml
 - patches/webhook_in_activemqartemisscaledowns.yaml
 - patches/webhook_in_activemqartemissecurities.yaml
+#- patches/webhook_in_activemqartemissecurities.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
