--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
 - broker_v2alpha1_activemqartemisscaledown.yaml
 - broker_v1alpha1_activemqartemissecurity.yaml
 - broker_v1beta1_activemqartemis.yaml
+- broker_v1beta1_activemqartemissecurity.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
