--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -52,6 +52,26 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-broker-amq-io-v1beta1-activemqartemissecurity
+  failurePolicy: Fail
+  name: mactivemqartemissecurity.kb.io
+  rules:
+  - apiGroups:
+    - broker.amq.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - activemqartemissecurities
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-broker-amq-io-v2alpha3-activemqartemisaddress
   failurePolicy: Fail
   name: mactivemqartemisaddress.kb.io
@@ -113,6 +133,26 @@ webhooks:
     - UPDATE
     resources:
     - activemqartemises
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-broker-amq-io-v1beta1-activemqartemissecurity
+  failurePolicy: Fail
+  name: vactivemqartemissecurity.kb.io
+  rules:
+  - apiGroups:
+    - broker.amq.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - activemqartemissecurities
   sideEffects: None
 - admissionReviewVersions:
   - v1
